--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -39,4 +40,6 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+/out
 
